# EpidemicSpreading

./: .gitignore  README.md  configure.ac
src/: Makefile.am  bfs_tree.cc  bfs_tree.h  constant.h  disease_dynamics.cc  disease_dynamics.h  dynamic_network.cc  dynamic_network.h  main.cc  neighbor_info.h  network.cc  network.h  parameter.cc  parameter.h  pearl_network.cc  pearl_network.h  runner.h  runner_manager.h  simulator.cc  simulator.h  source_identification.cc  source_identification.h  static_network.cc  static_network.h  step_calc_static_feature.cc  step_calc_static_feature.h  step_determine_relationship.cc  step_determine_relationship.h  step_epidemic_simulation.cc  step_epidemic_simulation.h  step_evolve_large_component.cc  step_evolve_large_component.h  step_gen_contact_parts.cc  step_gen_contact_parts.h  step_get_small_component.cc  step_get_small_component.h  step_reindex_gml.cc  step_reindex_gml.h  step_select_nelder_mead_solutions.cc  step_select_nelder_mead_solutions.h  (+21 more)
