bin_PROGRAMS = netjob
INCLUDES = -I/usr/local/include/igraph

netjob_LDADD= -ligraph -lgsl -lgslcblas
netjob_LDFLAGS= -static
netjob_SOURCES=	main.cc\
				constant.h\
				neighbor_info.h\
				network.cc\
				network.h\
				parameter.cc\
				parameter.h\
				pearl_network.h\
				runner.h\
				runner_manager.h\
				static_network.cc\
				static_network.h\
				dynamic_network.cc\
				dynamic_network.h\
				pearl_network.cc\
				pearl_network.h\
				step_test.cc\
				step_test.h\
				temp_node_data.h\
				undirected_graph.cc\
				undirected_graph.h\
				util_boost.cc\
				util_boost.h\
				util.cc\
				util_constant.cc\
				util_constant.h\
				util.h\
				util_igraph.cc\
				util_igraph.h\
				util_gsl.cc\
				util_gsl.h\
				disease_dynamics.cc\
				disease_dynamics.h\
				simulator.h\
				simulator.cc\
				source_identification.h\
				source_identification.cc\
				bfs_tree.h\
				bfs_tree.cc\
				step_source_identification.h\
				step_source_identification.cc\
				step_source_identification_v2.h\
				step_source_identification_v2.cc
